# captioning-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-eval.txt
.claude/: settings.local.json
data/: kb.json
data/eval/: landmark_map.json  test_set.json
docs/plans/: 2026-05-07-hanoi-captioning.md
docs/specs/: 2026-05-07-hanoi-captioning-design.md
hanoi_caption/: composer.py  dam_model.py  image_describer.py  kb_indexer.py  kb_loader.py  kb_matcher.py  model_registry.py  pipeline.py  pipeline_retriever.py  query_extractor.py  region_describer.py  region_proposer.py  schemas.py  video_pipeline.py
hanoi_caption/retrieval/: backbones.py  index.py  retrieve.py
notebooks/: 01_phase1_kb_only.ipynb  02_phase2_full_pipeline.ipynb  03_retriever_comparison.ipynb
scripts/: analyze_dataset.py  run_phase2_bench.py
scripts/data_collection/: build_all_backbones.py  config.py  crawl_selected.py  crawler.py  extract_fixed_frames.py  feature_extractor.py  indexer.py
scripts/eval/: build_test_set.py  eval_caption.py  eval_llm_judge.py  eval_segmentation.py  eval_summary.py  generate_landmark_map.py  run_module2.py  run_pipeline.py
tests/: conftest.py  test_composer.py  test_kb_indexer.py  test_kb_loader.py  test_kb_matcher.py  test_pipeline.py  test_query_extractor.py  test_region_proposer.py  test_schemas.py  test_video_dam_caption.py  test_video_frame_budget.py  test_video_smoothing.py
tests/eval/: test_build_test_set.py  test_eval_caption.py  test_eval_llm_judge.py  test_eval_segmentation.py  test_eval_summary.py
tests/models/: test_backbones.py
(+13 files in other folders)
